--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ".",
+  "homepage": "/",
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "gh-pages": "^3.2.3"
