--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.23.0",
+    "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
